# Computer-Vision

./: .gitignore  CMakeLists.txt  README.md  run_test.py
include/: aruco_detector.hpp  drone_hud.hpp  image_processor.hpp  object_detector.hpp  qr_detector.hpp  utils.hpp
python_app/: main.py
src/: aruco_detector.cpp  drone_hud.cpp  image_processor.cpp  main.cpp  object_detector.cpp  qr_detector.cpp  utils.cpp
tools/: generate_landing_pads.py
